// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be structurally sound when audio + live stream 1`] = `
<vime-default-controls>
  <vime-controls full-width="">
    <vime-playback-control tooltip-direction="right"></vime-playback-control>
    <vime-volume-control></vime-volume-control>
    <vime-control-spacer></vime-control-spacer>
    <vime-live-indicator></vime-live-indicator>
    <div style="margin-left: 0; padding-right: 2px;"></div>
  </vime-controls>
</vime-default-controls>
`;

exports[`should be structurally sound when audio 1`] = `
<vime-default-controls>
  <vime-controls full-width="">
    <vime-playback-control tooltip-direction="right"></vime-playback-control>
    <vime-volume-control></vime-volume-control>
    <vime-current-time></vime-current-time>
    <vime-scrubber-control></vime-scrubber-control>
    <vime-end-time></vime-end-time>
    <vime-settings-control tooltip-direction="left"></vime-settings-control>
    <div style="margin-left: 0; padding-right: 2px;"></div>
  </vime-controls>
</vime-default-controls>
`;

exports[`should be structurally sound when desktop video + live stream 1`] = `
<vime-default-controls>
  <vime-scrim gradient="up"></vime-scrim>
  <vime-controls activeduration="2750" full-width="">
    <vime-control-group space="none">
      <vime-playback-control tooltip-direction="right"></vime-playback-control>
      <vime-volume-control></vime-volume-control>
      <vime-control-spacer></vime-control-spacer>
      <vime-live-indicator></vime-live-indicator>
      <vime-pip-control></vime-pip-control>
      <vime-fullscreen-control tooltip-direction="left"></vime-fullscreen-control>
    </vime-control-group>
  </vime-controls>
</vime-default-controls>
`;

exports[`should be structurally sound when desktop video 1`] = `
<vime-default-controls>
  <vime-scrim gradient="up"></vime-scrim>
  <vime-controls activeduration="2750" full-width="">
    <vime-control-group>
      <vime-scrubber-control></vime-scrubber-control>
    </vime-control-group>
    <vime-control-group space="top">
      <vime-playback-control tooltip-direction="right"></vime-playback-control>
      <vime-volume-control></vime-volume-control>
      <vime-time-progress></vime-time-progress>
      <vime-control-spacer></vime-control-spacer>
      <vime-caption-control></vime-caption-control>
      <vime-pip-control></vime-pip-control>
      <vime-settings-control></vime-settings-control>
      <vime-fullscreen-control tooltip-direction="left"></vime-fullscreen-control>
    </vime-control-group>
  </vime-controls>
</vime-default-controls>
`;

exports[`should be structurally sound when mobile video + live stream 1`] = `
<vime-default-controls>
  <vime-scrim></vime-scrim>
  <vime-controls activeduration="2750" full-width="" pin="topLeft">
    <vime-control-spacer></vime-control-spacer>
    <vime-volume-control></vime-volume-control>
    <vime-fullscreen-control></vime-fullscreen-control>
  </vime-controls>
  <vime-controls activeduration="2750" pin="center">
    <vime-playback-control style="--vm-control-scale: 1.5;"></vime-playback-control>
  </vime-controls>
</vime-default-controls>
`;

exports[`should be structurally sound when mobile video 1`] = `
<vime-default-controls>
  <vime-scrim></vime-scrim>
  <vime-controls activeduration="2750" full-width="" pin="topLeft">
    <vime-control-spacer></vime-control-spacer>
    <vime-volume-control></vime-volume-control>
    <vime-caption-control></vime-caption-control>
    <vime-settings-control></vime-settings-control>
  </vime-controls>
  <vime-controls activeduration="2750" pin="center">
    <vime-playback-control style="--vm-control-scale: 1.5;"></vime-playback-control>
  </vime-controls>
  <vime-controls activeduration="2750" full-width="" pin="bottomLeft">
    <vime-control-group>
      <vime-current-time></vime-current-time>
      <vime-control-spacer></vime-control-spacer>
      <vime-end-time></vime-end-time>
      <vime-fullscreen-control></vime-fullscreen-control>
    </vime-control-group>
    <vime-control-group space="top">
      <vime-scrubber-control></vime-scrubber-control>
    </vime-control-group>
  </vime-controls>
</vime-default-controls>
`;
